# WSI

./: README.md
.devcontainer/: devcontainer.json
cnn_mnist/: eval_hand.py  my_visualization.py  nn.py  visualize.py
list2/: 15h2.csv  15h3.csv  8h1.csv  8h2.csv  8h3.csv  CMakeLists.txt  anal.py  ex2.sh  run.sh  sprawko.md  vis.py
list2/include/: common.hpp  heur_linearconflicts.hpp  heur_manhattan.hpp  heur_misplaced.hpp  heur_pdb.hpp  pdb_loader.hpp  solver.hpp  utils.hpp
list2/src/: heur_linearconflicts.cpp  heur_manhattan.cpp  heur_misplaced.cpp  heur_pdb.cpp  main.cpp  pdb_loader.cpp  solver.cpp  utils.cpp
list3/server/: dupa  game_client  game_random_bot  game_server  game_server.c  minimax.hpp  minimax1.hpp  minimax2.hpp  nig  nig.cpp  nig1  nig1.cpp  nig2  nig2.cpp  shell.nix
list3/server/279722/: 279722  Makefile  README.md  board.h  main.cpp  minimax1.hpp
list4/: .gitignore  README.md  db.py  k.py  shell.nix
list4/cpp/: CMakeLists.txt
list4/cpp/.cache/clangd/index/: cl_module.cpp.D3069AB1767C3597.idx  dbscan.cpp.A92776F476AE85A6.idx  dbscan.hpp.99D92C461B03E138.idx  kmeans.cpp.5DF30A5A5E9E4C7D.idx  kmeans.h.A88037CB2CCE705E.idx  kmeans.hpp.EE8B46D2A48CDB78.idx
list4/cpp/include/: dbscan.hpp  kmeans.hpp
list4/cpp/src/: cl_module.cpp  dbscan.cpp  kmeans.cpp
list5/: CMakeLists.txt  debug.sh  shell.nix
list5/.cache/clangd/index/: activation_funcs.cu.EDA4EADD93F22D0A.idx  cuda_neural_network.h.65C41CBFC557315F.idx  matrix_ops.cu.C32864B112EC278C.idx  neural_network.cpp.25F998F98045E66E.idx  neural_network.cu.AE59E9B308BCB90D.idx  python_bindings.cpp.CEADACD4F5CC4779.idx
list5/python/: README.md  mnistcuda.py  mnistpy.py
list5/src/cpp/: neural_network.cpp  python_bindings.cpp
list5/src/cuda/: activation_funcs.cu  matrix_ops.cu
list5/src/include/: activation_funcs.h  cuda_neural_network.h  matrix_ops.h
random_forest_mnist/: eval_hand.py  mnist_random_forest.keras  nn.py
random_forest_mnist/mnist_random_forest_ydf/: data_spec.pb  header.pb  random_forest_header.pb
rawdog_mnist/: explanation.md  nn.py
scripts/: draw.py  flip.py  turn.py
sign_classifier/: CMakeLists.txt  build.sh
sign_classifier/.cache/clangd/index/: activation_funcs.cu.4CBB939332CD083C.idx  activation_funcs.cu.EDA4EADD93F22D0A.idx  cuda_neural_network.h.65C41CBFC557315F.idx  matrix_ops.cu.D41A1EC032799522.idx  neural_network.cpp.25F998F98045E66E.idx  neural_network.cu.70D56C1066498B8B.idx  python_bindings.cpp.CEADACD4F5CC4779.idx  python_bindings.cpp.F8457DD32BD9037B.idx  sign_classifier.cpp.A9396F1666D2DA3D.idx  sign_classifier.h.138FE5CE05EA7CB8.idx
sign_classifier/python/: README.md  mnistcuda.py  sign.py
sign_classifier/src/cpp/: neural_network.cpp  python_bindings.cpp  sign_classifier.cpp
sign_classifier/src/cuda/: activation_funcs.cu  neural_network.cu
sign_classifier/src/include/: activation_funcs.h  cuda_neural_network.h  sign_classifier.h
simple_mnist/: eval_hand.py  nn.py  simple_mnist.keras
simplenet_mnist/: eval_hand.py  nn.py  test.py
